Changed amount of columns to five. Added 'IT-hjelp'. Fixed overflow bug that caused there to be clickable areas outside of the boxes

--- a/scss/_bits.scss
+++ b/scss/_bits.scss
@@ -1,5 +1,6 @@
 // Settings
 $cubesize: 200px;
+$margin: 10px;
 
 // Colors
 $lightgrey: whitesmoke;
