--- a/scss/_linkbox.scss
+++ b/scss/_linkbox.scss
@@ -16,6 +16,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
   @include box-shadow(rgba(black, 0.4) 0 1px 4px);
 
   &.front a {
