--- a/scss/_logo.scss
+++ b/scss/_logo.scss
@@ -22,7 +22,8 @@
 #studweb .logo,
 #map .logo,
 #cloudstor .logo,
-#romres .logo {
+#romres .logo,
+#it-hjelp .logo {
 	font-family: "Entypo";
 	font-size: 13em;
 	line-height: 0.65em;
